syntax = "proto3";

package signup;

option go_package = "api/proto";

service Signup {
    rpc Authenticate (SignUpCredentials) returns (SignUpAuthToken);
}

message SignUpCredentials {
    string email = 1;
    string password = 2;
    string firstname = 3;
    string lastname = 4;
}

message SignUpAuthToken {
    string token = 1;
}